<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MakeList"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input"
            android:hint="@string/input"
            android:layout_width="0dp"
            android:layout_weight="1.30"
            android:layout_height="wrap_content" />

        <!--<Button-->
            <!--android:id="@+id/save"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.24"-->
            <!--android:text="@string/save"-->
            <!--android:background="#ffff0000"-->
            <!--android:textColor="#ffffff" />-->

        <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
            android:text="@string/save"
        android:background="#ffff0000"
        android:textColor="#ffffff"
            android:inputType="none"
            android:onClick="onClick"
            android:padding="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textAlignment="center" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textSize="8pt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

    <TextView
        android:id="@+id/length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:text="@string/length"
        android:paddingTop="6pt" />



    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:paddingTop="6pt"
        android:layout_width="match_parent"
        android:layout_height="284dp"
        android:choiceMode="singleChoice" />

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/showall"-->
        <!--android:id="@+id/showall"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:textColor="#ffffff"-->
        <!--android:background="#ffff0000"-->
        <!--android:width="200dp"-->
        <!--android:textStyle="bold" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:editable="false"
        android:onClick="onClick"
        android:background="#ffff0000"
        android:text="@string/showall"
        android:id="@+id/showall"
        android:autoText="false"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:inputType="none"
        android:textAlignment="center"
        android:padding="10dp" />

</LinearLayout>